# zpg-2.0

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: App.cpp.EF2D9181C0ED505C.idx  App.hpp.BEE114177B53FA0C.idx  Camera.cpp.09094A978AD129C9.idx  Camera.hpp.A5F615DA63BEB01C.idx  DrawableObject.cpp.08BFD4BAD793DC3A.idx  DrawableObject.hpp.5A71F2098036409E.idx  Model.cpp.3AB14016F42C721B.idx  Model.hpp.2EEF98F2F3345879.idx  Observer.hpp.B88910A4CD648736.idx  Scene.cpp.3FCFB83B8B7E9546.idx  Scene.hpp.B6951466A020CFA3.idx  ShaderProgram.cpp.E0AE8512BFDB8ACF.idx  ShaderProgram.hpp.B8729824EF58BAD4.idx  Subject.hpp.65450CEB4CB81523.idx  bushes.hpp.0A74450029442626.idx  gift.hpp.BC78B63A6A4164E2.idx  main.cpp.A666A0D7BC2C8A65.idx  plain.hpp.7289B065D7FA40FE.idx  shaders.hpp.CA4AA3BB53C41A34.idx  sphere.hpp.F15B5E225D8CD4AC.idx  suzi_flat.hpp.4CECE642D60DA0D9.idx  suzi_smooth.hpp.4F56F9B3524FF458.idx  tree.hpp.98EE71D9B80A0A19.idx
src/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  DrawableObject.cpp  DrawableObject.hpp  Light.hpp  Model.cpp  Model.hpp  Observer.hpp  Rotation.hpp  Scale.hpp  Scene.cpp  Scene.hpp  ShaderCreator.hpp  ShaderLoader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Subject.hpp  TransformationComponent.hpp  TransformationComposite.hpp  Translation.hpp  main.cpp
src/shaders/: blinn.frag  blinn.vert  default.frag  default.vert  defaultFragment.glsl  lambert.frag  phong.frag  phong.vert  secondVertex.glsl  shaders.hpp
src/shaders/old/: defaultVertex.glsl  secondFragment.glsl
